agregue contenido de practicas

--- a/Clase 11/clase11.html
+++ b/Clase 11/clase11.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="clased.js"></script>
+    <script src="clase11.js"></script>
 </body>
 </html>
