--- a/Clase 11/clase11b.html
+++ b/Clase 11/clase11b.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="clased.js"></script>
+    
+    <script src="clase11b.js"></script>
 </body>
 </html>
