--- a/Clase 12/clase12.html
+++ b/Clase 12/clase12.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="clased.js"></script>
+    
+    <script src="clase12.js"></script>
 </body>
 </html>
